# quick_rsqrt

./: CMakeLists.txt  main.test.cpp  quick_rsqrt.hpp  readme.md
